# EZ-Language

./: .ezconfig  .ezconfig.example  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: README  glossary.md  index.md
docs/architecture/: codegen.md  design-rationale.md  overview.md  semantic-pass.md
docs/changelog/: 0.x.md
docs/concepts/: environment.md  expressions.md  friend-modules.md  functions.md  types.md  visibility.md
docs/contributing/: roadmap.md  setup.md  style.md
docs/getting-started/: quickstart.md  tour.md
docs/guides/: embedding-native-code.md  printing-and-debugging.md
docs/reference/: cli.md  configuration.md  diagnostics.md  grammar.md  nix.md
envs/: native.nix
examples/: access.ez  boolean.ez  calculator.ez  demo.ez  functions.ez  math.ez  native_math.cpp  py_demo.ez  py_test.ez
examples/.ezbuild/: libnt.dylib
grammar/: EZLanguage.g4
src/: bootstrap_listener.cpp  bootstrap_listener.h  codegen_c.cpp  codegen_c.h  config.cpp  config.h  diagnostics.cpp  friends.cpp  friends.h  interpreter.cpp  interpreter.h  main.cpp  semantic.cpp  semantic.h
src/codegen/: codegen_c.cpp  codegen_c.h
src/config/: config.h  nix_env.cpp  nix_env.h
src/core/: bootstrap_listener.h  interpreter.cpp  interpreter.h  semantic.cpp  semantic.h  types.h
src/diagnostics/: diagnostics.h
src/friends/: friends.cpp  friends.h
src/util/: util.cpp  util.h
tests/: test_booleans.ez  test_cpp.ez  test_empty_void.ez  test_functions_bool.ez  test_functions_int.ez  test_simple_printf.ez  test_type_errors.ez  test_void_and_nested.ez  test_void_func.ez  test_void_var.ez  test_void_with_printf.ez
wiki/: Embedding-Native-Code.md  Environment.md  Expressions.md  Feature-Tour.md  Friend-Modules.md  Functions.md  Home.md  Printing-and-Debugging.md  Quickstart.md  Types.md  Visibility.md
(+5 files in other folders)
